# dolphinheartlib

./: .gitignore  DEPLOY.md  README.md  dolphinmusic.fusionxlink.com.conf  pyproject.toml  server.sh
.server/: backend.pid  frontend.pid  studio.pid
.tasks/: 2025-02-07_1_research-system-studio.md
assets/: tags.txt
docs/: generation_control_analysis.md  project_review_unfinished.md  review_bugs_and_optimizations.md  review_report.md  studio_feature_checklist.md  studio_flows.md  studio_frontend_review.md
dolphinheartmula-studio/: App.tsx  README.md  index.html  metadata.json  package-lock.json  package.json  types.ts  vite-env.d.ts  vite.config.ts
dolphinheartmula-studio/components/: LoginModal.tsx  Sidebar.tsx  Toast.tsx  WaveformViz.tsx
dolphinheartmula-studio/contexts/: AuthContext.tsx  LanguageContext.tsx  PageStateContext.tsx  ProjectContext.tsx
dolphinheartmula-studio/docs/: page_state_preservation.md
dolphinheartmula-studio/pages/: AudioLab.tsx  Guide.tsx  Library.tsx  Login.tsx  Share.tsx  Studio.tsx  Transcribe.tsx
dolphinheartmula-studio/services/: api.ts
dolphinheartmula-studio/utils/: lyricsPrompt.ts
examples/: README.md  run_lyrics_transcription.py  run_music_generation.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts
server/: README.md  __init__.py  config.py  db.py  main.py  models.py  project_store.py  queue.py  requirements-dev.txt  requirements.txt  schemas.py  store.py  workers.py
server/routes/: auth.py  files.py  lyrics.py  models.py  projects.py  shares.py  (+2 more)
(+14 files in other folders)
